--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     margin: 0;
-    background-color: rgb(0, 102, 255);
+    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/004/485/500/small/winter-christmas-pattern-seamless-snow-snowfall-on-dark-background-template-for-printing-onto-fabric-wrapping-paper-design-children-s-background-for-fabric-textile-wallpaper-clothing-vector.jpg");
+    /*background-color: rgb(0, 102, 255);*/
     font-family: Arial, sans-serif;
 }
 
 header {
      padding: 10vh;
   text-align: center;
-  background-image: url("https://www.snowcarbon.co.uk/_ipx/q_80/https://admin.snowcarbon.co.uk/storage/resortInfo/29031/sc-media-d68749676c58c4874cda5c8eea64d6c1-alpe-dhuez-lionel-royet-ot-alpe-dhuez-4-crop960.jpg");
+  background-image: url("https://nordictravels.eu/wp-content/uploads/2024/01/blogpostmarch4.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -26,17 +27,22 @@ header {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 20px;
   transition: border-color 0.3s ease;
 }
+.button:hover {
+  transition-duration: 1s;
+  border-color: rgb(255, 255, 255);
+}
 nav {
 
     padding: 1vh;
     text-align: center;
-    background-color: rgb(0, 162, 255);
+    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/004/485/500/small/winter-christmas-pattern-seamless-snow-snowfall-on-dark-background-template-for-printing-onto-fabric-wrapping-paper-design-children-s-background-for-fabric-textile-wallpaper-clothing-vector.jpg");
+    /*background-color: rgb(0, 162, 255);*/
     
 }
 
@@ -45,16 +51,41 @@ main {
     min-height: 100vh;
     
 }
-
+.sidro{
+  background-color: #0051ff;
+  border: 2px solid transparent;
+  color: rgb(255, 255, 255);
+  padding: 5px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: border-color 0.3s ease;
+}
+.sidro:hover {
+  background-color: #006eff;
+  transition-duration: 1s;
+  border-color: rgb(255, 255, 255);
+}
 aside {
     width: 25%; 
     margin: 1vh;
-    text-align: left;
+    text-align: center;
     background-color: rgba(0, 0, 0, 0.5); 
     border-radius: 20px;
     padding: 1vh; 
 }
-
+#weatherapi-weather-widget-3 {
+  width: 364%; 
+  min-height: 200px;
+}
+iframe{
+  width:90%;
+  height: 100%;
+}
 section {
     margin: 1vh;
     width: 85%;
@@ -65,10 +96,13 @@ section {
 }
 
 footer {
-    padding: 2vh;
-    text-align: center;
-    background-color: rgb(0, 68, 255);
-    border-radius: 20px;
+  color: white;
+  padding: 2vh;
+  margin: 1vh;
+  text-align: center;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  background-color: rgba(0, 0, 0, 0.5); 
 }
 footer .kontakti a img {
   width: 24px;
