--- a/Web3/styles.css
+++ b/Web3/styles.css
@@ -3,6 +3,19 @@ body{
   text-align: center;
   margin: 10px;
 }
+.button{
+  background-color: #0077ff;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
+}
 p {
   line-height: 1.6;
   margin-bottom: 20px;
