--- a/Web3/styles.css
+++ b/Web3/styles.css
@@ -16,6 +16,36 @@ body{
   cursor: pointer;
   border-radius: 20px;
 }
+.row {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Create three unequal columns that sits next to each other */
+.column {
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Left and right column */
+.column.side {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+/* Middle column */
+.column.middle {
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+}
+@media (max-width: 600px) {
+  .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
 p {
   line-height: 1.6;
   margin-bottom: 20px;
@@ -58,7 +88,7 @@ footer{
   color: black;
   background-color: #317fff;
   border-radius: 20px;
-  font-size: 2.4vh;
+  font-size: 1.3rem;
 }
 main{
   display: flex;
@@ -74,7 +104,7 @@ section{
   margin-top: 2vh;
   margin-bottom: 2vh;
   padding: 1vh;
-  font-size: 20px;
+  font-size: 1.3rem;
   border-radius: 20px;
   border: solid 2px;
 }
@@ -138,6 +168,7 @@ ul{
   position: fixed;
   width: 300px;
   height: auto;
+
 }
 .img5{
   position: sticky;
